--- a/stile.css
+++ b/stile.css
@@ -75,10 +75,10 @@ navbar-toggler{
 
                                 /*--------------Services---------------*/
 #services{
-            background-image:url("tremux.jpg");
+            background-image:url(tremux.jpg);
             background-size:cover;
             background-position:center;
-            color:black !important;
+            color:efefef !important;
             background-attachment:fixed;
             padding-top:50px;
             padding-bottom:50px;
@@ -86,12 +86,12 @@ navbar-toggler{
 }
 #services h1{
             text-align:center;
-            color:blue !important;
+            color:#efefef !important;
             padding-bottom:10px;           
 }
 #services h1:after{
            content:'';
-            background: black;
+            background: #efefef;
             display-bottom:block;
 
             height:1px;
@@ -201,10 +201,10 @@ height:400px;
 
                              /*---------------Promo-------------*/
 #promo{
-            background-image: url("apple.jpg");
+            background-image: url(apple.jpg);
             background-size:cover;
             background-position: center;
-            color: black;
+            color: #fff;
             background-attachment: fixed;
             text-align: center;
             padding: 100px;
@@ -403,4 +403,3 @@ blockquote::after{
              margin: 3px;
              color: red;
 }
-
