--- a/stile.css
+++ b/stile.css
@@ -75,14 +75,13 @@ navbar-toggler{
 
                                 /*--------------Services---------------*/
 #services{
-            background-image:url("tremux.jpg");
+            background-image: url("tremux.jpg");
             background-size:cover;
             background-position:center;
             color:efefef !important;
             background-attachment:fixed;
             padding-top:50px;
             padding-bottom:50px;
-
 }
 #services h1{
             text-align:center;
@@ -135,7 +134,7 @@ h1{
 }
 h1::after{
             content: '';
-            background: #007bff;
+            background-color: #007bff;
             display:block;
             height: 3px;
             width: 170px;
@@ -245,7 +244,7 @@ height:400px;
 }
 .price-head p{
             font-size: 25px;
-            color: #ccc;
+            color: black;
             font-weight: bold;
             line-height: 30px;
 }
