--- a/stile.css
+++ b/stile.css
@@ -162,7 +162,7 @@ height:400px;
             font-size:22px;
             font-weight:bold;
             margin-top:15px;
-            color: white !important;
+            color: red !important;
 
 }
 .profile-pic h3{
