--- a/stile.css
+++ b/stile.css
@@ -368,7 +368,7 @@ blockquote::after{
 }
                                /*------------Get in Touch-------------*/
 #contact{
-            background: #efefef;
+            background: black;
             padding-top: 40px;
             padding-bottom: 40px;
             color: #777;
