--- a/stile.css
+++ b/stile.css
@@ -214,7 +214,7 @@ height:400px;
                              /*----------Price Plans-------------*/
 #price{
             padding: 40px 0;
-            background: black;
+            background: pink;
             color: blue;
 }
 .single-price{
